[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.13.0-pre.2"
sha2 = "0.10.7"
bellman = "0.14.0"
rand = "0.8.5"
ff = "0.13.0"
bls12_381 = "0.7.0"
pairing = "0.21.0"