[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = "0.4.0"
ark-groth16 = "0.4.0"
ark-relations = "0.4.0"
hex = "0.4.2"
sha2 = "0.11.0-pre.2"
rand = "0.8.5"
ark-bls12-381 = "0.4.0"

[build-dependencies]
ark-bls12-381 = "0.4.0"

[profile.dev]
opt-level = 3
lto = true